--- a/company/templates/company/company_detail.html
+++ b/company/templates/company/company_detail.html
@@ -17,20 +17,24 @@
 {% endblock panel_actions %}
 {% block panel_content %}
   <div class="row g-2 mb-3 p-3">
-    <div class="col-4 col-lg-2 text-muted"><i class="bi bi-telephone"></i> Phone:</div>
-    <div class="col-8 col-lg-4">
-       {{ company.phone }}
+    <div class="col-4 col-lg-2 text-muted">
+      <i class="bi bi-telephone"></i> Phone:
     </div>
-    <div class="col-4 col-lg-2 text-muted"><i class="bi bi-envelope"></i> Email:</div>
-    <div class="col-8 col-lg-4">
-       {{ company.email }}
+    <div class="col-8 col-lg-4">{{ company.phone }}</div>
+    <div class="col-4 col-lg-2 text-muted">
+      <i class="bi bi-envelope"></i> Email:
     </div>
-    <div class="col-4 col-lg-2 text-muted"><i class="bi bi-globe"></i> Website:</div>
+    <div class="col-8 col-lg-4">{{ company.email }}</div>
+    <div class="col-4 col-lg-2 text-muted">
+      <i class="bi bi-globe"></i> Website:
+    </div>
     <div class="col-8 col-lg-10">
-      <a href="{{ company.website }}" target="_blank" title="company website"> {{ company.website|truncatechars:30 }}</a>
+      <a href="{{ company.website }}" target="_blank" title="company website">{{ company.website|truncatechars:30 }}</a>
     </div>
-    <div class="col-4 col-lg-2 text-muted"><i class="bi bi-journal"></i> Description:</div>
-    <div class="col-8 col-lg-10">{{ company.description }}</div>    
+    <div class="col-4 col-lg-2 text-muted">
+      <i class="bi bi-journal"></i> Description:
+    </div>
+    <div class="col-8 col-lg-10">{{ company.description }}</div>
   </div>
   {# manufactured_items #}
   {% if company.manufactured_items.count > 0 %}
@@ -41,9 +45,11 @@
       </div>
       <div class="panel-content pb-3">
         {% for item in company.manufactured_items.all %}
-          <span class="ps-2 pe-4">
-            <i class="bi bi-box2-fill item-text-color"></i> <a href="{{ item.get_absolute_url }}" title="View item">{{ item.name }}</a>
-          </span>
+          <p>
+            <span class="ps-2 pe-4">
+              <i class="bi bi-box2-fill item-text-color"></i> <a href="{{ item.get_absolute_url }}" title="View item">{{ item.name }}</a>
+            </span>
+          </p>
         {% endfor %}
       </div>
     </div>
@@ -57,9 +63,11 @@
       </div>
       <div class="panel-content pb-3">
         {% for item in company.supplied_items.all %}
-          <span class="ps-2 pe-4">
-            <i class="bi bi-box2-fill text-success"></i> <a href="{{ item.get_absolute_url }}" title="View item">{{ item.name }}</a>
-          </span>
+          <p>
+            <span class="ps-2 pe-4">
+              <i class="bi bi-box2-fill text-success"></i> <a href="{{ item.get_absolute_url }}" title="View item">{{ item.name }}</a>
+            </span>
+          </p>
         {% endfor %}
       </div>
     </div>
