--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -1,19 +1,41 @@
-{% extends 'object_list_base.html' %}
+{% extends "object_list_base.html" %}
 {% load ui_tags %}
 {% block title %}
   Locations
-{% endblock %}
+{% endblock title %}
+{% block css %}
+  <style>
+    .location-panel {
+      height: 120px;
+      overflow-y: auto;
+      border: 1px solid #dee2e6;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 1rem; /* Add some space between panels */
+    }
+
+    .location-panel .panel-content {
+      flex-grow: 1;
+      overflow-y: auto;
+      padding: 0.5rem 1rem;
+    }
+
+    .location-panel .row {
+      margin-bottom: 0; /* Remove bottom margin from the row */
+    }
+  </style>
+{% endblock css %}
 {% block panel_title %}
   <i class="bi bi-geo-alt-fill location-text-color"></i> Storage Locations
-{% endblock %}
+{% endblock panel_title %}
 {% block panel_actions %}
   <a href="{% url 'location_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New location</a>
-{% endblock %}
+{% endblock panel_actions %}
 {% block panel_content %}
   <div class="container-fluid pt-3">
     <!-- Headers -->
     <div class="row g-2 mb-2 d-none d-lg-flex text-muted fw-bold align-items-center">
-      <div class="col-3">
+      <div class="col-2">
         {% with current_sort=request.GET.sort_by|default:'name' current_order=request.GET.order|default:'asc' %}
           {% if current_sort == 'name' and current_order == 'asc' %}
             <a href="?sort_by=name&order=desc">Name <i class="bi bi-arrow-up"></i></a>
@@ -22,7 +44,7 @@
           {% endif %}
         {% endwith %}
       </div>
-      <div class="col-2">
+      <div class="col-1">
         {% with current_sort=request.GET.sort_by|default:'name' current_order=request.GET.order|default:'asc' %}
           {% if current_sort == 'room' and current_order == 'asc' %}
             <a href="?sort_by=room&order=desc">Room <i class="bi bi-arrow-up"></i></a>
@@ -31,40 +53,48 @@
           {% endif %}
         {% endwith %}
       </div>
-      <div class="col-3">Description</div>
-      <div class="col-3">Stock Items</div>
-      <div class="col-1 text-end">
-        {% toggle_icon 'tooltray-trigger' 'tooltray-container' %}
-      </div>
+      <div class="col-2">Description</div>
+      <div class="col-6">Stock Items</div>
+      <div class="col-1 text-end">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</div>
     </div>
     <!-- Rows for Each Location -->
     {% for location in locations %}
-      <div class="row py-1 border-top align-items-center {% if forloop.counter0|divisibleby:2 %}bg-light{% else %}bg-white{% endif %}">
-        <!-- Location Name -->
-        <div class="col-6 col-lg-3">
-          <a href="{{ location.get_absolute_url }}">{{ location.name }}</a>
-        </div>
-        <!-- Room -->
-        <div class="col-6 col-lg-2">{{ location.room.name|default_if_none:'' }}</div>
-        <!-- Description -->
-        <div class="col-lg-3 d-none d-lg-block small">{{ location.description|truncatechars:150 }}</div>
-        <!-- Stock Items -->
-        <div class="col-lg-3 d-none d-lg-block small">
-          {% if location.stock_items|length %}
-            {% for stock in location.stock_items|slice:10 %}
-              <a href="{{ stock.get_absolute_url }}">{{ stock }}</a>
-              {% if not forloop.last %},{% endif %}
-            {% endfor %}
-          {% endif %}
-        </div>
-        <!-- Actions -->
-        <div class="col-lg-1 d-none d-lg-block text-end">
-          <span class="tooltray-container d-none">
-            <a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a>
-            <a hx-get="{% url 'location_delete' location.pk %}" hx-trigger="click" hx-target="#crudModal .modal-content" hx-swap="innerHTML" data-bs-toggle="modal" data-bs-target="#crudModal" href="javascript:"><i class="bi bi-trash"></i></a>
-          </span>
+      <div class="panel location-panel">
+        <div class="panel-content {% if forloop.counter0|divisibleby:2 %}bg-light{% else %}bg-white{% endif %}">
+          <div class="row py-1 align-items-center">
+            <!-- Location Name -->
+            <div class="col-12 col-lg-2">
+              <a href="{{ location.get_absolute_url }}">{{ location.name }}</a>
+            </div>
+            <!-- Room -->
+            <div class="col-12 col-lg-1">{{ location.room.name|default_if_none:'' }}</div>
+            <!-- Description -->
+            <div class="col-lg-2 d-none d-lg-block small">{{ location.description|truncatechars:150 }}</div>
+            <!-- Stock Items -->
+            <div class="col-lg-6 d-none d-lg-block small">
+              {% if location.stock_items|length %}
+                {% for stock in location.stock_items|slice:10 %}
+                  <a href="{{ stock.get_absolute_url }}">{{ stock }}</a>
+                  {% if not forloop.last %},{% endif %}
+                {% endfor %}
+              {% endif %}
+            </div>
+            <!-- Actions -->
+            <div class="col-lg-1 d-none d-lg-block text-end">
+              <span class="tooltray-container d-none">
+                <a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a>
+                <a hx-get="{% url 'location_delete' location.pk %}"
+                   hx-trigger="click"
+                   hx-target="#crudModal .modal-content"
+                   hx-swap="innerHTML"
+                   data-bs-toggle="modal"
+                   data-bs-target="#crudModal"
+                   href="javascript:"><i class="bi bi-trash"></i></a>
+              </span>
+            </div>
+          </div>
         </div>
       </div>
     {% endfor %}
   </div>
-{% endblock %}
+{% endblock panel_content %}
